Background region loader.